--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -3,64 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Live Streaming</title>
-    <link href="https://unpkg.com/video.js/dist/video-js.css" rel="stylesheet">
-    <script src="https://unpkg.com/video.js/dist/video.js"></script>
-<!--    <script src="https://unpkg.com/@videojs/http-streaming/dist/videojs-http-streaming.js"></script>-->
-<!--    <script src="https://cdn.jsdelivr.net/npm/videojs-contrib-quality-levels@2.0.9/dist/videojs-contrib-quality-levels.min.js"></script>-->
-<!--    <script src="https://cdn.jsdelivr.net/npm/videojs-hls-quality-selector@1.1.1/dist/videojs-hls-quality-selector.min.js"></script>-->
-    <script src="https://cdn.jsdelivr.net/npm/flv.js@1.5.0/dist/flv.min.js" integrity="sha256-D6TKHbDUtkg2nzStu2Cq8Gn674mUh7oc+2gIdVECNlY=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/videojs-flvjs@0.2.0/dist/videojs-flvjs.min.js" integrity="sha256-9E4vlrJpHeWFm/dzSKOps4Csfx0X1ReuUX43FWEeSJE=" crossorigin="anonymous"></script>
+    <link type="text/css" rel="stylesheet" href="stylesheets/style.css" />
+    <script src="//code.jquery.com/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.countdown/2.2.0/jquery.countdown.min.js" integrity="sha512-lteuRD+aUENrZPTXWFRPTBcDDxIGWe5uu0apPEn+3ZKYDwDaEErIK9rvR0QzUGmUQ55KFE2RqGTVoZsKctGMVw==" crossorigin="anonymous"></script>
 </head>
 <body>
-<video id="player" class="video-js vjs-default-skin" height="360" width="auto"
-       controls preload="none" data-setup='{}'>
-    <source src="ws://kif2020.kiranamegatara.com:8000/live/stream.flv" type="video/flv"/>
-</video>
-<script>
-    this.videoJSplayer = videojs('#player', {
-        fluid: true,
-        aspectRatio: '16:9',
-        html5: {
-            // hls: {
-            //     overrideNative: true,
-            //     //withCredentials: true
-            // },
-            controls: false,
-            autoplay: true,
-            preload: 'auto'
-        },
-        techOrder: ['html5', 'flvjs'],
-        flvjs: {
-            mediaDataSource: {
-                isLive: true,
-                cors: true,
-                withCredentials: false,
-            },
-            // config: {},
-        },
-    });
-    this.videoJSplayer.controls('true');
-    this.videoJSplayer.isButtonVisible = false;
-    // this.videoJSplayer.hlsQualitySelector();
-    // (function(window, videojs) {
-    //     var player = window.player = videojs('videojs-hls-quality-selector-player', {
-    //         aspectRatio: '16:9',
-    //         fluid: true,
-    //         html5: {
-    //             hls: {
-    //                 overrideNative: true,
-    //                 //withCredentials: true
-    //             },
-    //             controls: false,
-    //             autoplay: false,
-    //             preload: 'auto'
-    //         }
-    //     });
-    //     player.controls('true');
-    //     player.hlsQualitySelector({
-    //         displayCurrentQuality: true,
-    //     });
-    // }(window, window.videojs));
-</script>
+    <section class="text-gray-700 body-font">
+      <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+        <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
+          <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">KIF 2020 Streaming
+            <br class="hidden lg:inline-block">under construction
+          </h1>
+          <p class="mb-8 leading-relaxed">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In feugiat odio ut mauris tempor interdum. Fusce placerat euismod nisl quis aliquet. Donec eget nisl sed dolor elementum pulvinar et ac dui. Sed in feugiat lacus, at cursus mi.</p>
+          <div class="flex justify-center">
+            <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg w-full">
+                <span id="counter"></span>
+            </button>
+          </div>
+        </div>
+        <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+          <img class="object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600/000/ffffff&text=KIF+2020">
+        </div>
+      </div>
+    </section>
+    <script>
+        (function() {
+            $('#counter').countdown('2020/08/28', function(event) {
+                $(this).html(event.strftime('Start in %D days %H:%M:%S'));
+            });
+        })();
+    </script>
 </body>
 </html>
