--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -3,35 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <title>Live Streaming</title>
-    <link type="text/css" rel="stylesheet" href="stylesheets/style.css" />
-    <script src="//code.jquery.com/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.countdown/2.2.0/jquery.countdown.min.js" integrity="sha512-lteuRD+aUENrZPTXWFRPTBcDDxIGWe5uu0apPEn+3ZKYDwDaEErIK9rvR0QzUGmUQ55KFE2RqGTVoZsKctGMVw==" crossorigin="anonymous"></script>
+    <link type="text/css" rel="stylesheet" href="stylesheets/style.css"/>
+    <link href="https://unpkg.com/video.js/dist/video-js.css" rel="stylesheet">
 </head>
-<body>
-    <section class="text-gray-700 body-font">
-      <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-        <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-          <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">KIF 2020 Streaming
-            <br class="hidden lg:inline-block">under construction
-          </h1>
-          <p class="mb-8 leading-relaxed">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In feugiat odio ut mauris tempor interdum. Fusce placerat euismod nisl quis aliquet. Donec eget nisl sed dolor elementum pulvinar et ac dui. Sed in feugiat lacus, at cursus mi.</p>
-          <div class="flex justify-center">
-            <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg w-full">
-                <span id="counter"></span>
-            </button>
-          </div>
+<body class="bg-orange-900">
+<section class="text-gray-700 body-font">
+    <div class="container px-5 py-24 mx-auto flex flex-wrap">
+        <div class="rounded-lg overflow-hidden -mx-4 mt-auto mb-auto w-3/4 shadow-lg">
+            <video id="player" class="w-full h-full video-js vjs-default-skin vjs-big-play-centered"
+                   poster="/images/video-poster.jpeg"
+                   controls preload="none" data-setup='{}'>
+                <source src="ws://kif2020.kiranamegatara.com:8000/live/stream.flv" type="video/flv"/>
+            </video>
         </div>
-        <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-          <img class="object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600/000/ffffff&text=KIF+2020">
+        <div id="counter" class="w-1/4 mt-6 sm:mt-0 flex flex-wrap  content-start pl-10">
+            <img class="object-cover object-center w-full" src="images/side-poster.jpeg"/>
+            <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
+                <h3 id="days" class="title-font font-medium text-2xl text-white">1</h3>
+                <p class="leading-relaxed text-yellow-600">Days</p>
+            </div>
+            <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
+                <h3 id="hours" class="title-font font-medium text-2xl text-white">24</h3>
+                <p class="leading-relaxed text-yellow-600">Hours</p>
+            </div>
+            <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
+                <h3 id="mins" class="title-font font-medium text-2xl text-white">60</h3>
+                <p class="leading-relaxed text-yellow-600">Mins</p>
+            </div>
+            <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
+                <h3 id="secs" class="title-font font-medium text-2xl text-white">60</h3>
+                <p class="leading-relaxed text-yellow-600">Sec</p>
+            </div>
         </div>
-      </div>
-    </section>
-    <script>
-        (function() {
-            $('#counter').countdown('2020/08/28', function(event) {
-                $(this).html(event.strftime('Start in %D days %H:%M:%S'));
-            });
-        })();
-    </script>
+    </div>
+</section>
+<footer class="text-white body-font">
+    <div class="bg-yellow-700">
+        <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+            <p class="text-yellow-900 text-sm text-center sm:text-left">© 2020 KIF 2020 —
+                made by<a href="#" rel="noopener noreferrer" class="text-red-900 font-bold ml-1" target="_blank">@rephol</a>
+            </p>
+            <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+        <a class="text-yellow-900">
+          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-yellow-900">
+          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-yellow-900">
+          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+            <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-yellow-900">
+          <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+            <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
+            <circle cx="4" cy="4" r="2" stroke="none"></circle>
+          </svg>
+        </a>
+      </span>
+        </div>
+    </div>
+</footer>
+<script src="//code.jquery.com/jquery.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+        integrity="sha512-rmZcZsyhe0/MAjquhTgiUcb4d9knaFc7b5xAfju483gbEXTkeJRUMIPk6s3ySZMYUHEcjKbjLjyddGWMrNEvZg=="
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.31/moment-timezone-with-data.js"
+        integrity="sha512-ECoTMVFwwVtxjEBRjUMjviUd6hBjwDhBJI0+3W2YDs+ld5rHHUDr59T15gxwEPkGu5XLmkASUSvPgQe/Tpyodg=="
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.countdown/2.2.0/jquery.countdown.min.js"
+        integrity="sha512-lteuRD+aUENrZPTXWFRPTBcDDxIGWe5uu0apPEn+3ZKYDwDaEErIK9rvR0QzUGmUQ55KFE2RqGTVoZsKctGMVw=="
+        crossorigin="anonymous"></script>
+<script src="https://unpkg.com/video.js/dist/video.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/flv.js@1.5.0/dist/flv.min.js" integrity="sha256-D6TKHbDUtkg2nzStu2Cq8Gn674mUh7oc+2gIdVECNlY=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/videojs-flvjs@0.2.0/dist/videojs-flvjs.min.js" integrity="sha256-9E4vlrJpHeWFm/dzSKOps4Csfx0X1ReuUX43FWEeSJE=" crossorigin="anonymous"></script>
+<script>
+    (function () {
+        const dateLaunch = moment.tz("2020-08-28 00:00", "Asia/Jakarta");
+        $('#counter').countdown(dateLaunch.toDate(), function (event) {
+            $(this).find('#days').html(event.strftime('%D'));
+            $(this).find('#hours').html(event.strftime('%H'));
+            $(this).find('#mins').html(event.strftime('%M'));
+            $(this).find('#secs').html(event.strftime('%S'));
+        });
+        this.videoJSplayer = videojs('#player', {
+            fluid: true,
+            aspectRatio: '16:9',
+            html5: {
+                // hls: {
+                //     overrideNative: true,
+                //     //withCredentials: true
+                // },
+                controls: false,
+                autoplay: true,
+                preload: 'auto'
+            },
+            techOrder: ['html5', 'flvjs'],
+            flvjs: {
+                mediaDataSource: {
+                    isLive: true,
+                    cors: true,
+                    withCredentials: false,
+                },
+                // config: {},
+            },
+        });
+        this.videoJSplayer.controls('true');
+        this.videoJSplayer.isButtonVisible = false;
+    })();
+</script>
 </body>
 </html>
