--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -40,8 +40,8 @@
 <footer class="text-white body-font">
     <div class="bg-yellow-700">
         <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-            <p class="text-yellow-900 text-sm text-center sm:text-left">© 2020 KIF 2020 —
-                made by<a href="#" rel="noopener noreferrer" class="text-red-900 font-bold ml-1" target="_blank">@rephol</a>
+            <p class="text-yellow-900 text-sm text-center sm:text-left">© 2020 KIF 2020
+                <span class="hidden"> — made by<a href="#" rel="noopener noreferrer" class="text-red-900 font-bold ml-1" target="_blank">@rephol</a></span>
             </p>
             <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
         <a class="text-yellow-900">
