--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -3,114 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>KIF 2020 Live Streaming</title>
-    <link type="text/css" rel="stylesheet" href="css/style.css"/>
-    <link href="css/video-js.min.css" rel="stylesheet">
+    <%- include('partials/_styles') %>
 </head>
 <body class="bg-orange-900">
 <section class="text-gray-700 body-font">
     <div class="container px-5 py-24 mx-auto flex flex-wrap">
         <div class="rounded-lg overflow-hidden mt-auto mb-auto w-3/4 shadow-lg">
-            <video id="player" class="w-full h-full video-js vjs-default-skin vjs-big-play-centered"
-                   poster="/images/video-poster.jpeg"
-                   controls preload="none" data-setup='{}'>
-                <source src="ws://kif2020.kiranamegatara.com:8000/live/stream.flv" type="video/flv"/>
-            </video>
+            <% if (isLive == true) { %>
+                <%- include('partials/_video') %>
+            <% } else { %>
+                <img src="/images/video-poster.jpeg" class="object-cover object-center w-full h-full"/>
+            <% } %>
         </div>
-        <div id="counter" class="w-1/4 mt-6 sm:mt-0 flex flex-wrap  content-start pl-10">
-            <img class="object-cover object-center w-full" src="images/side-poster.jpeg"/>
-            <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
-                <h3 id="days" class="title-font font-medium text-2xl text-white">1</h3>
-                <p class="leading-relaxed text-yellow-600">Days</p>
+        <% if (isLive == true) { %>
+            <div class="w-1/4 mt-6 sm:mt-0 flex flex-wrap content-start pl-10">
+                <div class="h-full w-full bg-white rounded-lg px-auto">
+
+                </div>
             </div>
-            <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
-                <h3 id="hours" class="title-font font-medium text-2xl text-white">24</h3>
-                <p class="leading-relaxed text-yellow-600">Hours</p>
+        <% } else { %>
+            <div id="counter" class="w-1/4 mt-6 sm:mt-0 flex flex-wrap  content-start pl-10">
+                <img class="object-cover object-center w-full" src="images/side-poster.jpeg"/>
+                <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
+                    <h3 id="days" class="title-font font-medium text-2xl text-white">1</h3>
+                    <p class="leading-relaxed text-yellow-600">Days</p>
+                </div>
+                <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
+                    <h3 id="hours" class="title-font font-medium text-2xl text-white">24</h3>
+                    <p class="leading-relaxed text-yellow-600">Hours</p>
+                </div>
+                <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
+                    <h3 id="mins" class="title-font font-medium text-2xl text-white">60</h3>
+                    <p class="leading-relaxed text-yellow-600">Mins</p>
+                </div>
+                <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
+                    <h3 id="secs" class="title-font font-medium text-2xl text-white">60</h3>
+                    <p class="leading-relaxed text-yellow-600">Sec</p>
+                </div>
             </div>
-            <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
-                <h3 id="mins" class="title-font font-medium text-2xl text-white">60</h3>
-                <p class="leading-relaxed text-yellow-600">Mins</p>
-            </div>
-            <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
-                <h3 id="secs" class="title-font font-medium text-2xl text-white">60</h3>
-                <p class="leading-relaxed text-yellow-600">Sec</p>
-            </div>
-        </div>
+        <% } %>
     </div>
 </section>
-<footer class="text-white body-font">
-    <div class="bg-yellow-700">
-        <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-            <p class="text-yellow-900 text-sm text-center sm:text-left">© 2020 KIF 2020
-                <span class="hidden"> — made by<a href="#" rel="noopener noreferrer" class="text-red-900 font-bold ml-1" target="_blank">@rephol</a></span>
-            </p>
-            <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-        <a class="text-yellow-900">
-          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-            <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-          </svg>
-        </a>
-        <a class="ml-3 text-yellow-900">
-          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-            <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
-          </svg>
-        </a>
-        <a class="ml-3 text-yellow-900">
-          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-            <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-            <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-          </svg>
-        </a>
-        <a class="ml-3 text-yellow-900">
-          <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
-            <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
-            <circle cx="4" cy="4" r="2" stroke="none"></circle>
-          </svg>
-        </a>
-      </span>
-        </div>
-    </div>
-</footer>
-<script src="js/jquery.min.js"></script>
-<script src="js/moment.min.js"></script>
-<script src="js/moment-timezone-with-data.min.js"></script>
-<script src="js/jquery.countdown.min.js"></script>
-<script src="js/video.min.js"></script>
-<script src="js/flv.min.js"></script>
-<script src="js/videojs-flvjs.min.js"></script>
-<script>
-    (function () {
-        const dateLaunch = moment.tz("2020-08-28 00:00", "Asia/Jakarta");
-        $('#counter').countdown(dateLaunch.toDate(), function (event) {
-            $(this).find('#days').html(event.strftime('%D'));
-            $(this).find('#hours').html(event.strftime('%H'));
-            $(this).find('#mins').html(event.strftime('%M'));
-            $(this).find('#secs').html(event.strftime('%S'));
-        });
-        this.videoJSplayer = videojs('#player', {
-            fluid: true,
-            aspectRatio: '16:9',
-            html5: {
-                // hls: {
-                //     overrideNative: true,
-                //     //withCredentials: true
-                // },
-                controls: false,
-                autoplay: true,
-                preload: 'auto'
-            },
-            techOrder: ['html5', 'flvjs'],
-            flvjs: {
-                mediaDataSource: {
-                    isLive: true,
-                    cors: true,
-                    withCredentials: false,
-                },
-                // config: {},
-            },
-        });
-        this.videoJSplayer.controls('true');
-        this.videoJSplayer.isButtonVisible = false;
-    })();
-</script>
+<%- include('partials/_footer') %>
+<%- include('partials/_scripts', {streamHost}) %>
 </body>
 </html>
