--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -5,15 +5,13 @@
     <title>KIF 2020 Live Streaming</title>
     <%- include('partials/_styles') %>
 </head>
-<body class="bg-orange-900">
+<body class="bg-gray-900">
+<%- include('partials/_header') %>
 <section class="text-gray-700 body-font">
-    <div class="container px-5 py-24 mx-auto flex flex-wrap">
-        <div class="rounded-lg overflow-hidden mt-auto mb-auto w-3/4 shadow-lg">
-            <% if (isLive == true) { %>
-                <%- include('partials/_video') %>
-            <% } else { %>
-                <img src="/images/video-poster.jpeg" class="object-cover object-center w-full h-full"/>
-            <% } %>
+    <div class="container px-5 pb-24 mx-auto flex flex-wrap">
+        <div class="rounded-lg overflow-hidden mt-auto mb-auto w-3/4 shadow-lg flex
+            flex-wrap bg-white">
+            <%- include('partials/_video') %>
         </div>
         <% if (isLive == true) { %>
             <div class="w-1/4 mt-6 sm:mt-0 flex flex-wrap content-start pl-10">
