--- a/src/views/pages/partials/_video.ejs
+++ b/src/views/pages/partials/_video.ejs
@@ -1,4 +1,20 @@
-<video id="player" class="w-full h-full video-js vjs-default-skin vjs-big-play-centered"
-       poster="/images/video-poster.jpeg"
-       autoplay preload="none" data-setup='{}'>
-</video>
+<% if (isLive == true) { %>
+    <video id="player" class="w-full h-full video-js vjs-default-skin vjs-big-play-centered"
+           poster="/images/video-poster.jpeg"
+           autoplay preload="none" data-setup='{}'>
+    </video>
+<% } else { %>
+    <img src="/images/video-poster.jpeg" class="object-cover object-center w-full h-full"/>
+<% } %>
+<div class="w-1/4 px-20 py-4">
+    <img src="images/logo-dna-1.png" />
+</div>
+<div class="w-1/4 px-20 py-4">
+    <img src="images/logo-dna-2.png" />
+</div>
+<div class="w-1/4 px-20 py-4">
+    <img src="images/logo-dna-3.png" />
+</div>
+<div class="w-1/4 px-20 py-4">
+    <img src="images/logo-dna-4.png" />
+</div>
