--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -26,25 +26,25 @@
                     <div class="px-4 py-2 text-white w-full bg-red-900">
                         <h3>Event Countdown</h3>
                     </div>
-                    <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
+                    <div class="p-2 sm:w-1/2 lg:w-1/4 w-1/2">
                         <h3 id="days" class="title-font font-medium text-2xl text-white">1</h3>
                         <p class="leading-relaxed text-yellow-600">Days</p>
                     </div>
-                    <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
+                    <div class="p-2 sm:w-1/2 lg:w-1/4 w-1/2">
                         <h3 id="hours" class="title-font font-medium text-2xl text-white">24</h3>
                         <p class="leading-relaxed text-yellow-600">Hours</p>
                     </div>
-                    <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
+                    <div class="p-2 sm:w-1/2 lg:w-1/4 w-1/2">
                         <h3 id="mins" class="title-font font-medium text-2xl text-white">60</h3>
                         <p class="leading-relaxed text-yellow-600">Mins</p>
                     </div>
-                    <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
+                    <div class="p-2 sm:w-1/2 lg:w-1/4 w-1/2">
                         <h3 id="secs" class="title-font font-medium text-2xl text-white">60</h3>
                         <p class="leading-relaxed text-yellow-600">Sec</p>
                     </div>
-                    <div class="px-4 pb-2 text-white w-full text-left text-sm">
-                        <ul class="mx-4 list-disc">
-                            <li>Awarding ceremony</li>
+                    <div class="px-4 p-2 text-white w-full font-bold capitalize text-sm border-black border-opacity-25 border-t-2 border-dashed">
+                        <ul class="mx-4">
+                            <li>Awarding Ceremony</li>
                             <li>Band &amp; Tiktok Competition</li>
                             <li>Doorprize</li>
                         </ul>
