--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -55,6 +55,6 @@
     </div>
 </section>
 <%- include('partials/_footer') %>
-<%- include('partials/_scripts', {streamHost}) %>
+<%- include('partials/_scripts', {streamHost, isStatic, videoStatic}) %>
 </body>
 </html>
