--- a/src/views/pages/partials/_scripts.ejs
+++ b/src/views/pages/partials/_scripts.ejs
@@ -20,6 +20,7 @@
             fluid: true,
             autoplay: true,
             aspectRatio: '16:9',
+            loop: true,
             html5: {
                 hls: {
                     overrideNative: true,
@@ -48,6 +49,16 @@
         this.videoJSplayer.controls('true');
         this.videoJSplayer.isButtonVisible = false;
 
+        <% if(isStatic == true) { %>
+        this.videoJSplayer.updateSrc([
+            {
+                src: 'http://<%= streamHost %>/videos/<%= videoStatic%>',
+                type: 'video/mp4',
+                label: '720',
+                res: 720
+            }
+        ]);
+        <% } else { %>
         this.videoJSplayer.updateSrc([
             {
                 src: 'http://<%= streamHost %>' + ':8000/live/stream_720/index.m3u8',
@@ -68,6 +79,7 @@
                 res: 360
             },
         ]);
+        <% } %>
         this.videoJSplayer.on('resolutionchange', function(){
             console.info('Source changed to %s', videoJSplayer.src())
         })
