--- a/src/views/pages/partials/_video.ejs
+++ b/src/views/pages/partials/_video.ejs
@@ -1,4 +1,4 @@
-<% if (isLive == true) { %>
+<% if (isLive == true || isStatic == true) { %>
     <video id="player" class="w-full h-full video-js vjs-default-skin vjs-big-play-centered"
            poster="/images/video-poster.jpeg"
            autoplay preload="none" data-setup='{}'>
