--- a/src/views/pages/partials/_scripts.ejs
+++ b/src/views/pages/partials/_scripts.ejs
@@ -6,7 +6,7 @@
 <!--<script src="js/flv.min.js"></script>-->
 <!--<script src="js/videojs-flvjs.min.js"></script>-->
 <!--<script src="https://cdn.jsdelivr.net/npm/videojs-flash@2.2.1/dist/videojs-flash.min.js"></script>-->
-<script src="https://cdn.jsdelivr.net/npm/videojs-resolution-switcher-vjs7@1.0.0/videojs-resolution-switcher.js"></script>
+<script src="js/videojs-resolution-switcher.min.js"></script>
 <script>
     (function () {
         const dateLaunch = moment.tz("2020-08-28 00:00", "Asia/Jakarta");
