--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -1,60 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>KIF 2020 Live Streaming</title>
-    <%- include('partials/_styles') %>
-</head>
-<body class="bg-gray-900">
-<%- include('partials/_header') %>
-<section class="text-gray-700 body-font">
-    <div class="container px-5 pb-24 mx-auto flex flex-wrap">
-        <div class="rounded-lg overflow-hidden mt-auto mb-auto w-3/4 shadow-lg flex
+<%- contentFor('content') %>
+<div class="rounded-lg overflow-hidden mt-auto mb-auto w-3/4 shadow-lg flex
             flex-wrap bg-white">
-            <%- include('partials/_video') %>
+    <%- include('partials/_video') %>
+</div>
+<div class="w-1/4 pl-10">
+    <% if (isLive == true) { %>
+        <%- include('partials/_chat') %>
+    <% } else { %>
+        <div id="counter" class="text-center h-full w-full mt-6 sm:mt-0 flex flex-wrap content-start rounded-lg shadow-lg bg-red-800 overflow-hidden">
+            <img class="object-cover object-center w-full" src="images/side-poster.jpeg"/>
+            <div class="px-4 py-2 text-white w-full bg-red-900">
+                <h3>Event Countdown</h3>
+            </div>
+            <div class="p-2 sm:w-1/2 lg:w-1/4 w-1/2">
+                <h3 id="days" class="title-font font-medium text-2xl text-white">1</h3>
+                <p class="leading-relaxed text-yellow-600">Days</p>
+            </div>
+            <div class="p-2 sm:w-1/2 lg:w-1/4 w-1/2">
+                <h3 id="hours" class="title-font font-medium text-2xl text-white">24</h3>
+                <p class="leading-relaxed text-yellow-600">Hours</p>
+            </div>
+            <div class="p-2 sm:w-1/2 lg:w-1/4 w-1/2">
+                <h3 id="mins" class="title-font font-medium text-2xl text-white">60</h3>
+                <p class="leading-relaxed text-yellow-600">Mins</p>
+            </div>
+            <div class="p-2 sm:w-1/2 lg:w-1/4 w-1/2">
+                <h3 id="secs" class="title-font font-medium text-2xl text-white">60</h3>
+                <p class="leading-relaxed text-yellow-600">Sec</p>
+            </div>
+            <div class="px-4 p-2 text-white w-full font-bold capitalize text-sm border-black border-opacity-25 border-t-2 border-dashed">
+                <ul class="mx-4">
+                    <li>Awarding Ceremony</li>
+                    <li>Band &amp; Tiktok Competition</li>
+                    <li>Doorprize</li>
+                </ul>
+            </div>
         </div>
-        <div class="w-1/4 pl-10">
-            <% if (isLive == true) { %>
-                <div class="w-1/4 mt-6 sm:mt-0 flex flex-wrap content-start pl-10">
-                    <div class="h-full w-full bg-white rounded-lg px-auto">
-
-                    </div>
-                </div>
-            <% } else { %>
-                <div id="counter" class="text-center h-full w-full mt-6 sm:mt-0 flex flex-wrap content-start rounded-lg shadow-lg bg-red-800 overflow-hidden">
-                    <img class="object-cover object-center w-full" src="images/side-poster.jpeg"/>
-                    <div class="px-4 py-2 text-white w-full bg-red-900">
-                        <h3>Event Countdown</h3>
-                    </div>
-                    <div class="p-2 sm:w-1/2 lg:w-1/4 w-1/2">
-                        <h3 id="days" class="title-font font-medium text-2xl text-white">1</h3>
-                        <p class="leading-relaxed text-yellow-600">Days</p>
-                    </div>
-                    <div class="p-2 sm:w-1/2 lg:w-1/4 w-1/2">
-                        <h3 id="hours" class="title-font font-medium text-2xl text-white">24</h3>
-                        <p class="leading-relaxed text-yellow-600">Hours</p>
-                    </div>
-                    <div class="p-2 sm:w-1/2 lg:w-1/4 w-1/2">
-                        <h3 id="mins" class="title-font font-medium text-2xl text-white">60</h3>
-                        <p class="leading-relaxed text-yellow-600">Mins</p>
-                    </div>
-                    <div class="p-2 sm:w-1/2 lg:w-1/4 w-1/2">
-                        <h3 id="secs" class="title-font font-medium text-2xl text-white">60</h3>
-                        <p class="leading-relaxed text-yellow-600">Sec</p>
-                    </div>
-                    <div class="px-4 p-2 text-white w-full font-bold capitalize text-sm border-black border-opacity-25 border-t-2 border-dashed">
-                        <ul class="mx-4">
-                            <li>Awarding Ceremony</li>
-                            <li>Band &amp; Tiktok Competition</li>
-                            <li>Doorprize</li>
-                        </ul>
-                    </div>
-                </div>
-            <% } %>
-        </div>
-    </div>
-</section>
-<%- include('partials/_footer') %>
-<%- include('partials/_scripts', {streamHost, isStatic, videoStatic}) %>
-</body>
-</html>
+    <% } %>
+</div>
