--- a/src/views/pages/partials/_scripts.ejs
+++ b/src/views/pages/partials/_scripts.ejs
@@ -7,6 +7,10 @@
 <!--<script src="js/videojs-flvjs.min.js"></script>-->
 <!--<script src="https://cdn.jsdelivr.net/npm/videojs-flash@2.2.1/dist/videojs-flash.min.js"></script>-->
 <script src="js/videojs-resolution-switcher.min.js"></script>
+<% if (isLive) { %>
+    <script src="js/socket.io.js"></script>
+    <script src="js/chat.js"></script>
+<% } %>
 <script>
     (function () {
         const dateLaunch = moment.tz("2020-08-28 00:00", "Asia/Jakarta");
@@ -16,73 +20,65 @@
             $(this).find('#mins').html(event.strftime('%M'));
             $(this).find('#secs').html(event.strftime('%S'));
         });
-        this.videoJSplayer = videojs('#player', {
-            fluid: true,
-            autoplay: true,
-            aspectRatio: '16:9',
-            loop: true,
-            html5: {
-                hls: {
-                    overrideNative: true,
-                    //withCredentials: true
-                },
-                controls: false,
+        <% if (isLive || isStatic) { %>
+            this.videoJSplayer = videojs('#player', {
+                fluid: true,
                 autoplay: true,
-                preload: 'auto'
-            },
-            // techOrder: ['html5', 'flvjs'],
-            // flvjs: {
-            //     mediaDataSource: {
-            //         isLive: true,
-            //         cors: true,
-            //         withCredentials: false,
-            //     },
-            //     // config: {},
-            // },
-            plugins: {
-                videoJsResolutionSwitcher: {
-                    default: 720,
-                    dynamicLabel: true
+                aspectRatio: '16:9',
+                loop: true,
+                html5: {
+                    hls: {
+                        overrideNative: true,
+                        //withCredentials: true
+                    },
+                    controls: false,
+                    autoplay: true,
+                    preload: 'auto'
+                },
+                plugins: {
+                    videoJsResolutionSwitcher: {
+                        default: 720,
+                        dynamicLabel: true
+                    }
                 }
-            }
-        });
-        this.videoJSplayer.controls('true');
-        this.videoJSplayer.isButtonVisible = false;
+            });
+            this.videoJSplayer.controls('true');
+            this.videoJSplayer.isButtonVisible = false;
 
-        <% if(isStatic == true) { %>
-        this.videoJSplayer.updateSrc([
-            {
-                src: 'http://<%= streamHost %>/videos/<%= videoStatic%>',
-                type: 'video/mp4',
-                label: '720',
-                res: 720
-            }
-        ]);
-        <% } else { %>
-        this.videoJSplayer.updateSrc([
-            {
-                src: 'http://<%= streamHost %>' + ':8000/live/stream_720/index.m3u8',
-                type: 'application/x-mpegURL',
-                label: '720',
-                res: 720
-            },
-            {
-                src: 'http://<%= streamHost %>' + ':8000/live/stream_480/index.m3u8',
-                type: 'application/x-mpegURL',
-                label: '480',
-                res: 480
-            },
-            {
-                src: 'http://<%= streamHost %>' + ':8000/live/stream_360/index.m3u8',
-                type: 'application/x-mpegURL',
-                label: '360',
-                res: 360
-            },
-        ]);
+            <% if(isStatic == true) { %>
+            this.videoJSplayer.updateSrc([
+                {
+                    src: 'http://<%= streamHost %>/videos/<%= videoStatic%>',
+                    type: 'video/mp4',
+                    label: '720',
+                    res: 720
+                }
+            ]);
+            <% } else { %>
+            this.videoJSplayer.updateSrc([
+                {
+                    src: 'http://<%= streamHost %>' + ':8000/live/stream_720/index.m3u8',
+                    type: 'application/x-mpegURL',
+                    label: '720',
+                    res: 720
+                },
+                {
+                    src: 'http://<%= streamHost %>' + ':8000/live/stream_480/index.m3u8',
+                    type: 'application/x-mpegURL',
+                    label: '480',
+                    res: 480
+                },
+                {
+                    src: 'http://<%= streamHost %>' + ':8000/live/stream_360/index.m3u8',
+                    type: 'application/x-mpegURL',
+                    label: '360',
+                    res: 360
+                },
+            ]);
+            <% } %>
+            this.videoJSplayer.on('resolutionchange', function(){
+                console.info('Source changed to %s', videoJSplayer.src())
+            })
         <% } %>
-        this.videoJSplayer.on('resolutionchange', function(){
-            console.info('Source changed to %s', videoJSplayer.src())
-        })
-
     })();
 </script>
