--- a/src/views/pages/partials/_scripts.ejs
+++ b/src/views/pages/partials/_scripts.ejs
@@ -48,7 +48,7 @@
             <% if(isStatic == true) { %>
             this.videoJSplayer.updateSrc([
                 {
-                    src: 'http://<%= streamHost %>/videos/<%= videoStatic%>',
+                    src: 'http://<%= streamHost %>/videos/static-video.mp4',
                     type: 'video/mp4',
                     label: '720',
                     res: 720
