--- a/src/views/admin/partials/_footer.ejs
+++ b/src/views/admin/partials/_footer.ejs
@@ -1,5 +1,5 @@
 
-<footer class="text-white body-font">
+<footer class="text-white body-font flex-none">
     <div class="bg-gray-900">
         <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
             <p class=" text-sm text-center sm:text-left">© 2020 KIF 2020
