--- a/src/views/pages/partials/_styles.ejs
+++ b/src/views/pages/partials/_styles.ejs
@@ -1,7 +1,7 @@
 <link type="text/css" rel="stylesheet" href="css/style.css"/>
 <link href="css/video-js.min.css" rel="stylesheet">
-<link href="https://unpkg.com/@silvermine/videojs-quality-selector@1.2.4/dist/css/quality-selector.css" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/videojs-resolution-switcher-vjs7@1.0.0/videojs-resolution-switcher.css">
+<link href="css/quality-selector.css" rel="stylesheet">
+<link rel="stylesheet" href="css/videojs-resolution-switcher.css">
 <style>
     body {
         background: url('images/background.jpg');
