--- a/src/views/admin/index.ejs
+++ b/src/views/admin/index.ejs
@@ -38,8 +38,24 @@
         <h3 class="block text-gray-700 text-sm font-bold mb-2">Chat user list</h3>
         <div class="flex flex-col">
             <% chatUserList.forEach(function(user){ %>
-                <div class="flex-none text-sm text-teal-400 border-t-2 py-1">
-                    <%= user.name %>
+                <div class="flex flex-none text-sm border-t-2 py-1" data-userId="<%=user.id%>" data-allow="<%=user.allowPrize%>" data-win="<%=user.winPrize%>">
+                    <span class="flex-1 user text-teal-400 <%=user.allowPrize ? '': 'line-through' %>"><%= user.name %></span>
+                    <% if (!user.winPrize) { %>
+                        <span class="flex-none allowUser px-1">
+                            <% if(user.allowPrize) { %>
+                                <i class="fa fa-times"></i>
+                            <% } else { %>
+                                <i class="fa fa-check"></i>
+                            <% } %>
+                        </span>
+                    <span class="flex-none deleteUser px-1">
+                        <i class="fa fa-trash"></i>
+                    </span>
+                    <% } else { %>
+                    <span class="flex-none px-1">
+                        <i class="text-yellow-500 fa fa-trophy"></i>
+                    </span>
+                    <% } %>
                 </div>
             <% }); %>
         </div>
