--- a/src/views/admin/partials/_header.ejs
+++ b/src/views/admin/partials/_header.ejs
@@ -1,4 +1,4 @@
-<header class="text-gray-700 body-font bg-blue-100 mb-4">
+<header class="text-gray-700 body-font bg-blue-100 mb-4 flex-none">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
         <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
             <span class="ml-3 text-xl">KIF Admin</span>
