--- a/src/views/pages/partials/_scripts.ejs
+++ b/src/views/pages/partials/_scripts.ejs
@@ -45,7 +45,7 @@
             <% if(isStatic == true) { %>
             this.videoJSplayer.updateSrc([
                 {
-                    src: 'http://<%= streamHost %>/videos/static-video.mp4',
+                    src: '<%= streamHost %>/videos/static-video.mp4',
                     type: 'video/mp4',
                     label: '720',
                     res: 720
@@ -54,19 +54,19 @@
             <% } else { %>
             this.videoJSplayer.updateSrc([
                 {
-                    src: 'http://<%= streamHost %>' + ':8000/live/stream_720/index.m3u8',
+                    src: '<%= streamHost %>' + ':8000/live/stream_720/index.m3u8',
                     type: 'application/x-mpegURL',
                     label: '720',
                     res: 720
                 },
                 {
-                    src: 'http://<%= streamHost %>' + ':8000/live/stream_480/index.m3u8',
+                    src: '<%= streamHost %>' + ':8000/live/stream_480/index.m3u8',
                     type: 'application/x-mpegURL',
                     label: '480',
                     res: 480
                 },
                 {
-                    src: 'http://<%= streamHost %>' + ':8000/live/stream_360/index.m3u8',
+                    src: '<%= streamHost %>' + ':8000/live/stream_360/index.m3u8',
                     type: 'application/x-mpegURL',
                     label: '360',
                     res: 360
