--- a/src/views/prize/layout.ejs
+++ b/src/views/prize/layout.ejs
@@ -5,14 +5,13 @@
     <title>KIF 2020 Live Streaming</title>
     <%- include('partials/_styles') %>
 </head>
-<body class="h-screen bg-gray-100 flex flex-col">
-<%- include('partials/_header') %>
-<section class="flex-1">
-    <div class="container px-5 pb-24 mx-auto flex flex-wrap">
+<body class="bg-gray-900">
+<div class="text-gray-700 body-font flex flex-col">
+    <%- include('partials/_header') %>
+    <div class="container px-5 pb-24 mx-auto flex-1 flex flex-col">
         <%- content %>
     </div>
-</section>
-<%- include('partials/_footer') %>
-</body>
+</div>
 <%- include('partials/_scripts', {streamHost}) %>
+</body>
 </html>
