--- a/src/views/prize/index.ejs
+++ b/src/views/prize/index.ejs
@@ -15,19 +15,26 @@
     </div>
 </div>
 <div class="flex-1 flex flex-col">
-    <h2 class="pb-2 text-center text-white text-lg font-bold">30 orang ikut di chating area streaming KIF 2020</h2>
+    <h2 class="pb-2 text-center text-white text-lg font-bold"><%= chatUsers.length %> orang ikut di chating area streaming KIF 2020</h2>
     <h3 class="pb-10 text-center text-white text-md">Mereka mendapatkan kesempatan untuk mendapatkan doorprize pada acara ini</h3>
     <div class="prize-area flex-1 text-center">
-        <div class="pick-winner">
-            <button class="rounded-lg text-white p-4
-        transition duration-500 ease-in-out bg-green-800
-        hover:bg-yellow-500 hover:text-black
-        shadow-lg appearance-none focus:outline-none
-        transform hover:-translate-y-1 hover:scale-110">
+        <div class="pick-winner transition duration-500 ease-in-out ">
+            <button class=" transition duration-500 ease-in-out
+                rounded-lg text-white p-4 bg-green-800
+                hover:bg-yellow-500 hover:text-black
+                shadow-lg appearance-none focus:outline-none
+                transform hover:-translate-y-1 hover:scale-110">
                 <i class="fa fa-trophy fa-1x px-2 text-yellow-500 animate-pulse"></i>
                 Pilih Pemenang
                 <i class="fa fa-trophy fa-1x px-2 text-yellow-500 animate-pulse"></i>
             </button>
+        </div>
+        <div class="choosing-winner pb-10 text-white">
+            <div class="winner-text hidden">
+                <p class="text-3xl">Selamat kepada</p>
+                <p class="text-6xl name"></p>
+            </div>
+            <p class="text-6xl winner-roller hidden flex flex-col"></p>
         </div>
     </div>
 </div>
