--- a/src/views/admin/index.ejs
+++ b/src/views/admin/index.ejs
@@ -21,6 +21,12 @@
                     <label for="isStatic" class="text-xs text-gray-700">Static video</label>
                 </div>
                 <div class="w-full mb-2">
+                    <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
+                        Max prize
+                    </label>
+                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="prizeMax" name="prizeMax" type="number" placeholder="Max" value="<%=prizeMax%>">
+                </div>
+                <div class="w-full mb-2">
                     <input class="hidden shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="videoStatic" name="videoStatic" type="file" placeholder="Username">
                 </div>
                 <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow w-full text-sm">
@@ -31,12 +37,43 @@
     </div>
 </div>
 <div class="pr-8 w-2/4 ">
-    <div class="p-10 border-t-4 border-blue-500 bg-white shadow rounded-lg"></div>
+    <div class="p-10 border-t-4 border-blue-500 bg-white shadow rounded-lg">
+        <form method="post" action="api/prize/upload" enctype="multipart/form-data">
+            <div class="flex flex-wrap flex-col">
+                <div class="flex-none pb-8">
+                    <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
+                        Doorprize
+                    </label>
+                    <div class="w-full mb-2">
+                        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="excel" name="excel" type="file" placeholder="Username">
+                    </div>
+                    <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow w-full text-sm">
+                        Save
+                    </button>
+                </div>
+                <div class="flex-none flex justify-evenly border font-bold p-2">
+                    <div class="w-1/3">Perusahaan</div>
+                    <div class="w-1/3">NIK</div>
+                    <div class="w-1/3">Nama</div>
+                </div>
+                <div class="flex-1 max-h-3/4vh overflow-y-scroll">
+                    <% prizeList.forEach(function(prize){ %>
+                        <div class="flex justify-evenly border p-2 <%=prize.winPrize ? 'bg-yellow-200' : '' %>"
+                            data-id="<%=prize.id%>">
+                            <div class="w-1/3"><%= prize.perusahaan %></div>
+                            <div class="w-1/3"><%= prize.nik %></div>
+                            <div class="w-1/3"><%= prize.nama %></div>
+                        </div>
+                    <% }); %>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
 <div class="w-1/4 ">
-    <div class="p-8 border-t-4 border-blue-500 bg-white shadow rounded-lg">
+    <div class="p-8 border-t-4 border-blue-500 bg-white shadow rounded-lg flex flex-col h-screen">
         <h3 class="block text-gray-700 text-sm font-bold mb-2">Chat user list</h3>
-        <div class="flex flex-col">
+        <div class="flex flex-col overflow-y-scroll">
             <% chatUserList.forEach(function(user){ %>
                 <div class="flex flex-none text-sm border-t-2 py-1" data-userId="<%=user.id%>" data-allow="<%=user.allowPrize%>" data-win="<%=user.winPrize%>">
                     <span class="flex-1 user text-teal-400 <%=user.allowPrize ? '': 'line-through' %>"><%= user.name %></span>
