--- a/src/views/prize/index.ejs
+++ b/src/views/prize/index.ejs
@@ -15,8 +15,8 @@
     </div>
 </div>
 <div class="flex-1 flex flex-col">
-    <h2 class="pb-2 text-center text-white text-lg font-bold"><%= chatUsers.length %> orang ikut di chating area streaming KIF 2020</h2>
-    <h3 class="pb-10 text-center text-white text-md">Mereka mendapatkan kesempatan untuk mendapatkan doorprize pada acara ini</h3>
+    <h2 class="pb-2 hidden text-center text-white text-lg font-bold">orang ikut di chating area streaming KIF 2020</h2>
+    <h3 class="pb-10 hidden text-center text-white text-md">Mereka mendapatkan kesempatan untuk mendapatkan doorprize pada acara ini</h3>
     <div class="prize-area flex-1 text-center">
         <div class="pick-winner transition duration-500 ease-in-out ">
             <button class=" transition duration-500 ease-in-out
@@ -33,6 +33,8 @@
             <div class="winner-text hidden">
                 <p class="text-3xl">Selamat kepada</p>
                 <p class="text-6xl name"></p>
+                <p class="text-4xl perusahaan"></p>
+                <p class="text-2xl nik"></p>
             </div>
             <p class="text-6xl winner-roller hidden flex flex-col"></p>
         </div>
