--- a/src/views/admin/index.ejs
+++ b/src/views/admin/index.ejs
@@ -21,6 +21,13 @@
                     <label for="isStatic" class="text-xs text-gray-700">Static video</label>
                 </div>
                 <div class="w-full mb-2">
+                    <div class="relative inline-block w-10 mr-2 align-middle select-none transition duration-200 ease-in">
+                        <input <%= liveChat ? 'checked' : '' %> type="checkbox" name="liveChat" id="liveChat" value="1" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
+                        <label for="liveChat" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"></label>
+                    </div>
+                    <label for="liveChat" class="text-xs text-gray-700">Live Chat</label>
+                </div>
+                <div class="w-full mb-2">
                     <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
                         Max prize
                     </label>
