--- a/src/views/prize/index.ejs
+++ b/src/views/prize/index.ejs
@@ -14,27 +14,34 @@
         <i class="fa fa-trophy fa-1x px-2 text-yellow-800 animate-pulse"></i>
     </div>
 </div>
-<div class="flex-1 flex flex-col">
-    <div class="prize-area flex-1 text-center">
-        <div class="pick-winner transition duration-500 ease-in-out ">
-            <button class=" transition duration-500 ease-in-out
+<div class="prize-area flex-1 flex flex-col text-center pb-10">
+    <div class="pick-winner flex-none transition duration-500 ease-in-out ">
+        <button class=" transition duration-500 ease-in-out
                 rounded-lg text-white p-4 bg-green-800
                 hover:bg-yellow-500 hover:text-black
                 shadow-lg appearance-none focus:outline-none
                 transform hover:-translate-y-1 hover:scale-110">
-                <i class="fa fa-trophy fa-1x px-2 text-yellow-500 animate-pulse"></i>
-                Pilih Pemenang
-                <i class="fa fa-trophy fa-1x px-2 text-yellow-500 animate-pulse"></i>
-            </button>
+            <i class="fa fa-trophy fa-1x px-2 text-yellow-500 animate-pulse"></i>
+            Pilih Pemenang
+            <i class="fa fa-trophy fa-1x px-2 text-yellow-500 animate-pulse"></i>
+        </button>
+    </div>
+    <div class="choosing-winner flex-1 text-white">
+        <div class="winner-text hidden">
+            <p class="text-3xl">Selamat kepada</p>
+            <p class="text-6xl name"></p>
+            <p class="text-4xl perusahaan"></p>
+            <p class="text-2xl nik"></p>
         </div>
-        <div class="choosing-winner pb-10 text-white">
-            <div class="winner-text hidden">
-                <p class="text-3xl">Selamat kepada</p>
-                <p class="text-6xl name"></p>
-                <p class="text-4xl perusahaan"></p>
-                <p class="text-2xl nik"></p>
-            </div>
-            <p class="text-6xl winner-roller hidden flex flex-col"></p>
-        </div>
+        <p class="text-6xl winner-roller hidden flex flex-col"></p>
+    </div>
+    <div class="stop-winner flex-none transition duration-500 ease-in-out opacity-0 transform scale-0">
+        <button class=" transition duration-500 ease-in-out
+                rounded-lg text-white p-4 bg-red-800
+                hover:bg-yellow-500 hover:text-black
+                shadow-lg appearance-none focus:outline-none
+                transform hover:-translate-y-1 hover:scale-110">
+            Stop
+        </button>
     </div>
 </div>
