--- a/src/views/prize/layout.ejs
+++ b/src/views/prize/layout.ejs
@@ -8,7 +8,7 @@
 <body class="bg-gray-900">
 <div class="text-gray-700 body-font flex flex-col h-screen">
     <%- include('partials/_header') %>
-    <div class="container px-5 pb-24 mx-auto flex-1 flex flex-col">
+    <div class="container px-5 mx-auto flex-1 flex flex-col">
         <%- content %>
     </div>
     <div class="flex-none flex flex-row justify-around p-4 bg-white px-20">
