--- a/src/views/pages/partials/_scripts.ejs
+++ b/src/views/pages/partials/_scripts.ejs
@@ -10,13 +10,24 @@
 <% } %>
 <script>
     (function () {
-        const dateLaunch = moment.tz("2020-08-28 13:00", "Asia/Jakarta");
+        const dateLaunch = moment.tz("2020-08-27 20:00", "Asia/Jakarta");
         $('#counter').countdown(dateLaunch.toDate(), function (event) {
             $(this).find('#days').html(event.strftime('%D'));
             $(this).find('#hours').html(event.strftime('%H'));
             $(this).find('#mins').html(event.strftime('%M'));
             $(this).find('#secs').html(event.strftime('%S'));
-        });
+        }).on('update.countdown', function(e) {
+            checkLive()
+        })
+
+        function checkLive() {
+            if (dateLaunch.isBefore(moment.tz("Asia/Jakarta"))) {
+                $('#counter .countdown').addClass('hidden')
+                $('#counter .countdownLive').removeClass('hidden')
+            }
+        }
+        checkLive()
+
         <% if (isLive || isStatic) { %>
             this.videoJSplayer = videojs('#player', {
                 fluid: true,
@@ -41,6 +52,18 @@
             });
             this.videoJSplayer.controls('true');
             this.videoJSplayer.isButtonVisible = false;
+
+            this.videoJSplayer.ready(function() {
+                var promise = videoJSplayer.play();
+
+                if (promise !== undefined) {
+                    promise.then(function() {
+                        console.log('autoplay go')
+                    }).catch(function(error) {
+                        console.log('autoplay no', error)
+                    });
+                }
+            });
 
             <% if(isStatic == true) { %>
             this.videoJSplayer.updateSrc([
